<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.CreacionEvento">

    <LinearLayout
        android:id="@+id/vistaInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:visibility="visible">


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                >


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LabelIdEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idEvento" />

                    <EditText
                        android:id="@+id/idEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:ems="10"
                        android:hint="001"
                        android:inputType="number" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/LabelNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre" />

                    <EditText
                        android:id="@+id/nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="text"
                        android:layout_span="2"/>


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    >

                    <TextView
                        android:id="@+id/LabelHoraI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/horaI" />

                    <EditText
                        android:id="@+id/horaInicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="HH:MM"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/horaI"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="horaI"
                        android:text="..."
                        android:textAlignment="center" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LabelHoraF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horaF" />

                    <EditText
                        android:id="@+id/horaFinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="HH:MM"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/horaF"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="horaF"
                        android:text="..."
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LabelDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion" />

                    <EditText
                        android:id="@+id/direccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Calle 75 #16-22"
                        android:inputType="textPostalAddress"
                        android:layout_span="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LabelDescripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion" />

                    <EditText
                        android:id="@+id/descripcion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Descripcion del evento..."
                        android:inputType="textMultiLine"
                        android:layout_span="2"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categorias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categorias" />

                    <LinearLayout
                        android:id="@+id/categoriasCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="8dp">

                    </LinearLayout>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/LabelFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha" />

                    <EditText
                        android:id="@+id/fechaEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="DD/MM/AAAA"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/fecha"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="Fecha"
                        android:text="..."
                        android:textAlignment="center" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/guardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guardar"
                        android:layout_column="1"
                        />




                </TableRow>
            </TableLayout>



        </ScrollView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>